# Kursovaya_DB

./: README.md  pyproject.toml
data/: config.ini
src/: hh_api_client.py  utils.py
